<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="?listPreferredItemHeight"
    android:background="?selectableItemBackground"
    android:clickable="true"
    android:paddingEnd="@dimen/dimen_16dp"
    android:paddingLeft="@dimen/dimen_16dp"
    android:paddingRight="@dimen/dimen_16dp"
    android:paddingStart="@dimen/dimen_16dp">

    <ImageButton
        android:id="@+id/ib_favorite"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/mark_as_favorite"
        android:scaleType="center"
        android:src="@drawable/selector_fav_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/ib_favorite"
        android:layout_toStartOf="@id/ib_favorite"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_header"
            style="@style/Base.TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/header" />

        <TextView
            android:id="@+id/tv_subheader"
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/sub_header" />
    </LinearLayout>

</RelativeLayout>